overwrite dialog for folders

--- a/src/index.html
+++ b/src/index.html
@@ -529,6 +529,8 @@
         <!-- LOADER MESSAGE -->
         <div id="loader" class="ui centered loader"></div>
 
+        <div id="list_view"></div>
+
         <!-- <button id="clickme">Test Bluetooth</button>
         <p>Currently selected bluetooth device: <strong id="device-name"></strong></p> -->
 
