updated css. Updated confirm overwrite copy files

--- a/src/index.html
+++ b/src/index.html
@@ -388,7 +388,7 @@
                     <!-- <div class="column sixteen wide" id=""> -->
                         <div class="navigate" id="workspace_grid"></div>
                     <!-- </div> -->
-                    <br>
+                    <!-- <br> -->
                     <a href="#" id="clear_workspace">
                         <i class="icon eraser"></i>
                         clear workspace
@@ -401,7 +401,8 @@
             <div class="title" title="connected devices">
                 <!-- <i class="dropdown icon"></i> -->
                 <span id="btn_getdrives" class="" title="" style="color: #cfcfcf">
-                    <i class="icon large tablet"></i> USB Devices
+                    <!-- <i class="icon large tablet"></i> -->
+                    Devices
                 </span>
             </div>
             <div class="content active">
