--- a/src/index.html
+++ b/src/index.html
@@ -217,7 +217,7 @@
                     </a>
                     <a class="item" id="right">
                         <!-- <i class="ui icon  chevron right"></i> -->
-                        <i class="icon bi-chevron-left" title="go back"></i>
+                        <i class="icon bi-chevron-right" title="go back"></i>
                     </a>
 
                     <a class="item">
