updated properties window.

--- a/src/properties.html
+++ b/src/properties.html
@@ -20,7 +20,21 @@
 
             <div class="ui active tab" data-tab="properties" style="height:500px; overflow: auto;">
 
-                <br>
+                <div class="ui grid">
+
+                    <div class="column sixteen wide" style="padding: 20px; top: 20px !important;">
+
+                        <div id="file_properties">
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+                <!-- <br>
                 <div class="" style="width: 100%; text-align: center;">
                     <img src="../assets/icons/korla/places/scalable/gnome-folder.svg" width="48px" height="48px">
                 </div>
@@ -55,7 +69,7 @@
 
                 <div class="bold">Created</div>
                 <div id="created"></div>
-                <br>
+                <br> -->
 
 
             </div>
