fixed issue with dagselect. added progress for copying folders

--- a/src/index.html
+++ b/src/index.html
@@ -241,11 +241,6 @@
                         <!-- status information can go here -->
                     </div>
 
-
-                    <div class="item">
-                        <progress id="progress" class="hidden"></progress>
-                    </div>
-
                     <div class="items menu horizontal alighed right">
 
                     </div>
@@ -622,11 +617,14 @@
                 <input type="text" id="txt_search" class="hidden" style="moz-border: 1px solid grey; background-color:#252525 !important;color:#ffffff" value="" placeholder="quick search">
             </div>
 
+            <!-- BOTTOM STATUS INFO -->
             <div id="info" class="fixed bottom hidden">
                 <!--  -->
             </div>
 
-            
+            <!-- PROGRESS BAR -->
+            <progress id="progress" class="hidden"></progress>
+
 
             <!-- END OF SEGMENT -->
         </div>
