added progress bar for copy file operations

--- a/src/index.html
+++ b/src/index.html
@@ -623,8 +623,9 @@
             </div>
 
             <!-- PROGRESS BAR -->
-            <progress id="progress" class="hidden"></progress>
-
+            <div id="progress_div" class="hidden">
+                <progress id="progress" class="hidden"></progress>
+            </div>
 
             <!-- END OF SEGMENT -->
         </div>
