removed default scoll behavior. updated light theme

--- a/src/index.html
+++ b/src/index.html
@@ -341,7 +341,7 @@
                 <!-- HOME DIRECTORY -->
                 <div class="title" title="show home folders">
                     <!-- <i class="dropdown icon"></i> -->
-                    <span id="tree_home" class="" title="change to home directory" style="color: #cfcfcf">
+                    <span id="tree_home" class="" title="change to home directory">
                         <!-- <i class="icon large home"></i> -->
                         <i class="icon bi-house large"></i>
                         Home
@@ -403,7 +403,7 @@
                 <!-- DEVICES -->
                 <div class="title" title="connected devices">
                     <!-- <i class="dropdown icon"></i> -->
-                    <span id="btn_getdrives" class="" title="" style="color: #cfcfcf">
+                    <span id="btn_getdrives" class="" title="">
                         <!-- <i class="icon large tablet"></i> -->
                         <i class="icon bi-tablet large"></i>
                         Devices
