fixed issue with srolling

--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,7 @@
 
                     <div class="item" style="width:350px">
                         <!-- <div class="form"> -->
-                        <div class="ui input autocomplete">
+                        <div class="ui input tiny autocomplete">
                             <div class="breadcrumbs buttons">
                                 <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
                             </div>
@@ -246,10 +246,9 @@
                     </div>
 
                     <div class="">
-                        <div class="ui icon input" style="width:350px;">
+                        <div class="ui icon input tiny" style="width:250px;">
                             <input type="text" id="find" placeholder="Search...">
                             <i class="circular search link icon"></i>
-                            <!-- <button class="ui button"><i class="ui icon vertical-elipses"></i> </button> -->
                         </div>
 
                         <div id="find_options" class="ui card hidden border" style="background-color:rgba(40,40,40,0.95) !important; position: absolute; top: 20px; padding: 5px; width: 100%;">
@@ -533,8 +532,14 @@
 
         </aside>
 
+        <!-- <div id="find" class="find" style="width: 218px;">
+            <div id="txt_find" contenteditable="true" style="white-space: pre; overflow-wrap: initial; padding-right: 22px; width: 218px;""></div>
+        </div> -->
+
         <!-- MAIN VIEW -->
         <div class="ui segments dropzone" id="main_view" tabindex="0">
+
+
 
             <div id="messagebox"></div>
 
