added support for system icons. changed page size eto 1000

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
 
                     </div>
 
-                    <div class="">
+                    <div class="hidden">
                         <div class="ui icon input tiny" style="width:250px;">
                             <input type="text" id="find" placeholder="Search...">
                             <i class="circular search link icon"></i>
