move / copy work.  Updated List view

--- a/src/index.html
+++ b/src/index.html
@@ -227,13 +227,13 @@
                     </div>
 
                     <!-- LIST VIEW -->
-                    <a class="item hidden" id="btn_list_view">
-                        <i class="ui icon list"></i>
+                    <a class="item" id="btn_list_view">
+                        <i class="ui icon list small"></i>
                     </a>
 
                     <!-- ICON VIEW -->
                     <a class="item" id="btn_icon_view">
-                        <i class="ui icon th large"></i>
+                        <i class="ui icon th small"></i>
                     </a>
 
                     <div class="item" id="status">
@@ -515,7 +515,7 @@
 
 
             <!-- ICON VIEW -->
-            <div id="icon_view">
+            <div id="icon_view" style="margin-top: 20px">
 
                 <!-- FOLDERS -->
                 <div class="ui card fluid folders_card border-none" id="folders_card" style="">
@@ -548,7 +548,7 @@
 
 
             <!-- PAGING -->
-            <div id="pager" class="ui pagination menu" style="margin-left:20px; margin-top:10px"></div>
+            <div id="pager" class="" style="margin-left:20px; margin-top:10px"></div>
 
             <div class="ui inverted dimmer">
                 <div class="ui text hidden loader">Loading</div>
