--- a/src/index.html
+++ b/src/index.html
@@ -205,16 +205,16 @@
 
                     <a class="item" id="left">
                         <!-- <i class="ui icon chevron left" title="go back"></i> -->
-                        <i class="icon bi-chevron-left" title="go back"></i>
+                        <i class="icon bi-chevron-left small" title="go back"></i>
                     </a>
                     <a class="item" id="right">
                         <!-- <i class="ui icon  chevron right"></i> -->
-                        <i class="icon bi-chevron-right" title="go back"></i>
+                        <i class="icon bi-chevron-right small" title="go back"></i>
                     </a>
 
                     <a class="item">
                         <!-- <i class="ui icon chevron up"></i> -->
-                        <i class="icon bi-chevron-up"></i>
+                        <i class="icon bi-chevron-up small"></i>
                     </a>
 
                     <div class="item" style="width:400px; height:20px">
@@ -222,12 +222,12 @@
                             <div class="breadcrumbs buttons">
                                 <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
                             </div>
-                            <input type="text" autocomplete="address-level4" id="breadcrumbs" value="" class="" style="width:250px; background:#efefef;">
+                            <input type="text" id="breadcrumbs" value="" />
                         </div>
                     </div>
 
                     <!-- LIST VIEW -->
-                    <a class="item" id="btn_list_view">
+                    <a class="item  hidden" id="btn_list_view">
                         <i class="ui icon list small"></i>
                     </a>
 
@@ -416,9 +416,6 @@
 
         </aside>
 
-
-
-
         <!-- MAIN VIEW -->
         <div class="" id="main_view">
 
@@ -511,7 +508,7 @@
             </div>
 
             <!-- LIST VIEW -->
-            <div id="list_view"></div>
+            <div id="list_view" style="margin-top: 5px"></div>
 
 
             <!-- ICON VIEW -->
@@ -579,8 +576,6 @@
     </div>
 
 </body>
-
-
 
 <script type="" src="../assets/scripts/jquery-3.6.0.min.js"></script>
 <script type="" src="../assets/scripts/semantic.min.js"></script>
