list view updates

--- a/src/index.html
+++ b/src/index.html
@@ -222,12 +222,12 @@
                             <div class="breadcrumbs buttons">
                                 <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
                             </div>
-                            <input type="text" id="breadcrumbs" value="" />
+                            <input spellcheck="false" type="text" id="breadcrumbs" value="" />
                         </div>
                     </div>
 
                     <!-- LIST VIEW -->
-                    <a class="item  hidden" id="btn_list_view">
+                    <a class="item" id="btn_list_view">
                         <i class="ui icon list small"></i>
                     </a>
 
@@ -432,7 +432,7 @@
                     </a>
                 </div>
                 <div style="float:left; margin-left: 25px; width: 240px;">
-                    <input style="height:20px !important; " type="text" id="find" class="" placeholder="search">
+                    <input style="height:20px !important; " spellcheck="false" type="text" id="find" class="" placeholder="search">
                 </div>
                 <div style="position:absolute; right: 0;">
                     <a href="">
@@ -452,7 +452,7 @@
                                 <div class="fields">
                                     <div class="eight wide field">
                                         <div class="">
-                                            <input type="checkbox" id="find_folders" name="find_folders">
+                                            <input spellcheck="false" type="checkbox" id="find_folders" name="find_folders">
                                             <label style="font-weight: normal;">Folders</label>
                                         </div>
                                     </div>
@@ -557,7 +557,7 @@
             <div class="hidden" id="notice"></div>
 
             <div class="inlinesearch" style="">
-                <input type="text" id="txt_search" class="" style="moz-border: 1px solid grey; background-color:#252525 !important;color:#ffffff" value="" placeholder="quick search">
+                <input spellcheck="true" type="text" id="txt_search" class="" style="moz-border: 1px solid grey; background-color:#252525 !important;color:#ffffff" value="" placeholder="quick search">
             </div>
 
             <!-- BOTTOM STATUS INFO -->
