--- a/src/confirm.html
+++ b/src/confirm.html
@@ -26,11 +26,12 @@
 
             </div>
 
-            
+
         </div>
 
     </body>
 
+    <script type="" src="../assets/scripts/jquery-3.6.0.min.js"></script>
     <script type="" src="../assets/scripts/semantic.min.js"></script>
     <script type="" src="confirm.js"></script>
 
