updated show hide sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -513,7 +513,7 @@
 
             </div>
 
-            <!-- EMPTY DIR -->
+            <!-- INFO VIEW -->
             <div id="info_view"></div>
 
             <!-- LIST VIEW -->
